--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "git@github.com:6Ghadam/6Ghadam-Website.git",
   "author": "Ali Movahedi <ali_movahedi@aol.com>",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "autoprefixer": "^8.5.1",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
@@ -38,7 +38,9 @@
     "style-loader": "^0.20.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "url-loader": "^0.6.2",
-    "webpack-node-externals": "^1.6.0",
     "webpack-stream": "^4.0.0"
+  },
+  "dependencies": {
+    "express": "^4.16.3"
   }
 }
