feat: make countdown work

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-react": "^7.6.0",
     "less": "^3.0.1",
     "less-loader": "^4.0.5",
+    "moment": "^2.22.1",
     "postcss-loader": "^2.0.10",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
